--- a/views/category.ejs
+++ b/views/category.ejs
@@ -53,7 +53,7 @@
 
                     <div class="col-lg-4">
                         <div class="banner-content">
-                            <h1>Meilleure <br>Solution pour votre <br>Entreprise</h1>
+                            <h1>Online <br>Shopping</h1>
                             <p class="text-white">inappropriate behavior is often laughed off as “boys will be boys,”
                                 women face higher conduct standards – especially in the workplace. That’s why it’s
                                 crucial that, as women.</p>
@@ -82,7 +82,6 @@
                             <table class="table">
                                 <thead>
                                     <tr>
-                                        <th scope="col">Réf</th>
                                         <th scope="col">Name</th>
                                         <th scope="col">Action</th>
                                     </tr>
@@ -90,8 +89,6 @@
                                 <tbody>
                                     <% rows.forEach(function(row){ %>
                                         <tr>
-                                            <th scope="row">PDA62-00<%= row.idp %>
-                                            </th>
                                             <td>
                                                 <%= row.name_c %>
                                             </td>
@@ -127,8 +124,8 @@
             <div class="row justify-content-between">
                 <div class="col-lg-5">
                     <div class="subscribe-content">
-                        <h3 class="text-white">Abonnez-vous à notre newsletter</h3>
-                        <p class="text-white mb-0">Pour ne rien rater de notre actualité.</p>
+                        <h3 class="text-white">Subscribe for more coupon</h3>
+                        <p class="text-white mb-0">Online Shopping</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
