--- a/views/editProduct.ejs
+++ b/views/editProduct.ejs
@@ -99,8 +99,8 @@
             <div class="row justify-content-between">
                 <div class="col-lg-5">
                     <div class="subscribe-content">
-                        <h3 class="text-white">Abonnez-vous à notre newsletter</h3>
-                        <p class="text-white mb-0">Pour ne rien rater de notre actualité.</p>
+                        <h3 class="text-white">Subscribe for more coupon</h3>
+                        <p class="text-white mb-0">Online Shopping</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
