--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,7 @@
 
                     <div class="col-lg-4">
                         <div class="banner-content">
-                            <h1>Meilleure <br>Solution pour votre <br>Entreprise</h1>
+                            <h1>Online <br>Shopping</h1>
                             <p class="text-white">inappropriate behavior is often laughed off as “boys will be boys,”
                                 women face higher conduct standards – especially in the workplace. That’s why it’s
                                 crucial that, as women.</p>
@@ -135,8 +135,8 @@
             <div class="row justify-content-between">
                 <div class="col-lg-5">
                     <div class="subscribe-content">
-                        <h3 class="text-white">Abonnez-vous à notre newsletter</h3>
-                        <p class="text-white mb-0">Pour ne rien rater de notre actualité.</p>
+                        <h3 class="text-white">Subscribe for more coupon</h3>
+                        <p class="text-white mb-0">Online Shopping</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
