--- a/views/editCategory.ejs
+++ b/views/editCategory.ejs
@@ -60,7 +60,7 @@
                                       
                             <div class="form-group">
                               <label for="nom">Name Category :</label>
-                              <input type="text" class="form-control"   name="name_c" id="name_c" required>
+                              <input type="text" class="form-control" name="name_c" id="name_c" value="<%= row.name_c %>" required>
                             </div>
                         <br>
                             <button type="submit" class="btn btn-primary">Edit Category</button>
