--- a/views/editProduct.ejs
+++ b/views/editProduct.ejs
@@ -61,7 +61,7 @@
               
                             <div class="form-group">
                               <label for="nom">Name Product :</label>
-                              <input type="text" class="form-control"   name="name" id="name" required>
+                              <input type="text" class="form-control"   name="name_p" id="name_p" required>
                             </div>
                             <div class="form-group">
                               <label for="prenom">Price Product :</label>
@@ -69,9 +69,9 @@
                             </div>
                             <div class="form-group">
                               <label>Category :</label>
-                              <select class="form-control" name="id_spct" id="id_spct">
+                              <select class="form-control" name="category" id="category" >
                                 <% rows.forEach(function(row){ %>
-                                 <option name="idc" id="idc" value="<%= row.idc %>">Ctg <%= row.idc %> : <%= row.name_c %></option>
+                                 <option name="idc" id="idc" value="<%= row.category %>">Ctg <%= row.idc %> : <%= row.category %></option>
                                  <% }); %>
                              </select>
                             </div>
