--- a/views/index.ejs
+++ b/views/index.ejs
@@ -146,7 +146,7 @@
                             <div style="position: absolute; left: -5000px;">
                             </div>
                             <button class="primary-btn hover d-inline-flex align-items-center"><span
-                                    class="mr-10">Commencer</span><span class="lnr lnr-arrow-right"></span></button>
+                                    class="mr-10">Go...</span><span class="lnr lnr-arrow-right"></span></button>
                             <div class="info"></div>
                         </form>
                     </div>
