--- a/views/category.ejs
+++ b/views/category.ejs
@@ -54,9 +54,7 @@
                     <div class="col-lg-4">
                         <div class="banner-content">
                             <h1>Online <br>Shopping</h1>
-                            <p class="text-white">inappropriate behavior is often laughed off as “boys will be boys,”
-                                women face higher conduct standards – especially in the workplace. That’s why it’s
-                                crucial that, as women.</p>
+                            <p class="text-white">Get Latest Online Gadgets at Universal Gadgets where you can get latest designs of phone covers, screen protector, selfie sticks and much more gaming equipment at affordable prices.</p>
                         </div>
                     </div>
                     <div class="col-lg-8">
