--- a/views/category.ejs
+++ b/views/category.ejs
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                     <div class="col-lg-8">
-                        <div class="banner-video">
+                        <div class="banner1-video">
                             <div class="overlay overlay-bg"></div>
 
                         </div>
